# animal-fact-api

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  Procfile  README.md  justfile  koyeb.yaml  manage.py  pyproject.toml  requirements.txt  ruff.toml
.github/actions/: action.yml
.github/workflows/: pipeline.yml  python.yml
animal_fact_api/: __init__.py  asgi.py  index.py  settings.py  urls.py  wsgi.py
animal_fact_api/facts/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
animal_fact_api/facts/migrations/: 0001_initial.py  __init__.py
animal_fact_api/tests/unit_tests/facts/: test_models.py  test_views.py
