[tool.poetry]
name = "animal-fact-api"
version = "0.1.0"
description = "Basic API to return some animal facts."
authors = ["Catriona Bennett <catrionamairi@blueyonder.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
python-decouple = "^3.8"
psycopg = "^3.2.1"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.9"
safety = "^3.2.3"
ruff = "^0.5.1"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
