[tool.poetry]
name = "animal-fact-api"
version = "0.1.0"
description = "Basic API to return some animal facts."
authors = ["Catriona Bennett <catrionamairi@blueyonder.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
django = "^5.1.1"
djangorestframework = "^3.15.2"
psycopg = "^3.2.1"
python = "^3.12"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.9"
coverage = "^7.6.1"
pre-commit = "^3.8.0"
ruff = "^0.6.4"
safety = "^3.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
