[tool.poetry]
name = "animal-fact-api"
version = "0.1.0"
description = "Basic API to return some animal facts."
authors = ["Catriona Bennett <catrionamairi@blueyonder.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
django = "^5.1.4"
djangorestframework = "^3.15.2"
psycopg = "^3.2.3"
python = "^3.12"
gunicorn = "^23.0.0"
whitenoise = "^6.8.2"

[tool.poetry.group.dev.dependencies]
bandit = "^1.8.0"
coverage = "^7.6.9"
pre-commit = "^4.0.1"
ruff = "^0.8.3"
safety = "^3.2.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
